feat(group): modify group
